fixed flicker on scroll and attempted linksbar component on homepage

--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -26,6 +26,7 @@
     --color-lighthighlight: #a3002c;
     --color-bodytext: #fff8f6;
     --color-lightpink: #ed8c91;
+    --color-verylightpink: #ffacbf;
 }
 
 @theme {
